5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4060/executions/1621_2926.log
== TEST (2019-04-01 19:10:44) 
-- CODE:
açai=float("quantidade de açai: ")
esf=int("quantidade de esfirras: ")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    açai=float("quantidade de açai: ")
ValueError: could not convert string to float: 'quantidade de açai: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:11:33) 
-- CODE:
açai=float(input("quantidade de açai: "))
esf=int(input("quantidade de esfirras: "))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    açai=float("quantidade de açai: ")
ValueError: could not convert string to float: 'quantidade de açai: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:12:21) 
-- CODE:
a=float(input("quantidade de açai: "))
e=int(input("quantidade de esfirras: "))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    açai=float("quantidade de açai: ")
ValueError: could not convert string to float: 'quantidade de açai: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:12:50) 
-- CODE:
a=float(input("quantidade de açai: "))
e=int(input("quantidade de esfirras: "))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    açai=float("quantidade de açai: ")
ValueError: could not convert string to float: 'quantidade de açai: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:13:01) 
-- CODE:
a=float(input("quantidade de açai: "))
e=int(input("quantidade de esfirras: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    açai=float("quantidade de açai: ")
ValueError: could not convert string to float: 'quantidade de açai: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:13:23) 
-- CODE:
a=float(input("quantidade de acai: "))
e=int(input("quantidade de esfirras: "))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    açai=float("quantidade de açai: ")
ValueError: could not convert string to float: 'quantidade de açai: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:20:40) 
-- CODE:
a=float(input("quantidade de acai: "))
e=int(input("quantidade de esfirras: "))
#1kilo = 1000 gramas
x=a/1000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    açai=float("quantidade de açai: ")
ValueError: could not convert string to float: 'quantidade de açai: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:21:08) 
-- CODE:
a=float(input("quantidade de acai: "))
e=int(input("quantidade de esfirras: "))
#1kilo = 1000 gramas
x=a/1000
print(x)
-- OUTPUT:
0.504
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:21:29) 
-- CODE:
a=float(input("quantidade de acai: "))
e=int(input("quantidade de esfirras: "))
#1kilo = 1000 gramas
x=a/1000
print(x)
-- OUTPUT:
0.504
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:21:41) 
-- CODE:
a=float(input("quantidade de acai: "))
e=int(input("quantidade de esfirras: "))
#1kilo = 1000 gramas
x=a/1000
print(x)
-- OUTPUT:
0.504
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:24:06) 
-- CODE:
a=float(input("quantidade de acai: "))
e=int(input("quantidade de esfirras: "))
#1kilo = 1000 gramas
x=a/1000
z=0.024
print(x*0.024)
-- OUTPUT:
0.012096
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:24:22) 
-- CODE:
a=float(input("quantidade de acai: "))
e=int(input("quantidade de esfirras: "))
#1kilo = 1000 gramas
x=a/1000
z=0.024
print(x*0.024)
-- OUTPUT:
0.012096
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:25:48) 
-- CODE:
a=float(input("quantidade de acai: "))
e=int(input("quantidade de esfirras: "))
#1kilo = 1000 gramas
x=a/1000
z=0.024
g=e*3.00
print((x*0.024)+g
-- ERROR:
File "XXXX", line 8
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:25:56) 
-- CODE:
a=float(input("quantidade de acai: "))
e=int(input("quantidade de esfirras: "))
#1kilo = 1000 gramas
x=a/1000
z=0.024
g=e*3.00
print((x*0.024)+g)
-- OUTPUT:
3.012096
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:28:28) 
-- CODE:
a=float(input("quantidade de acai: "))
e=int(input("quantidade de esfirras: "))
#1kilo = 1000 gramas
x=a*24/1000
z=0.024
g=e*3.00
print((x*0.024)+g)
-- OUTPUT:
3.290304
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:32:02) 
-- CODE:
a=float(input("quantidade de acai: "))
e=int(input("quantidade de esfirras: "))
#1kilo = 1000 gramas
y=a*0.024
z=0.024
g=e*3.00
print((x*0.024)+g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print((x*0.024)+g)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:32:50) 
-- CODE:
a=float(input("quantidade de acai: "))
e=int(input("quantidade de esfirras: "))
#1kilo = 1000 gramas
y=a*0.024
z=0.024
g=e*3.00
print(y+g)
-- OUTPUT:
15.096
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:33:15) 
-- CODE:
a=float(input("quantidade de acai: "))
e=int(input("quantidade de esfirras: "))
#1kilo = 1000 gramas
y=a*0.024
g=e*3.00
print(y+g)
-- OUTPUT:
15.096
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:33:21) 
-- CODE:
a=float(input("quantidade de acai: "))
e=int(input("quantidade de esfirras: "))
#1kilo = 1000 gramas
y=a*0.024
g=e*3.00
print(y+g)
-- OUTPUT:
15.096
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:33:27) 
-- CODE:
a=float(input("quantidade de acai: "))
e=int(input("quantidade de esfirras: "))
#1kilo = 1000 gramas
y=a*0.024
g=e*3.00
print(y+g)
-- EXECUTION TIME:
0.150689
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
15.096
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
22.128
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
23.304000000000002
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 19:34:20) 
-- CODE:
a=float(input("quantidade de acai: "))
e=int(input("quantidade de esfirras: "))
#1kilo = 1000 gramas
y=a*0.024
g=e*3.00
z= y+g
print(round(z, 2))
-- OUTPUT:
15.1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 19:34:26) 
-- CODE:
a=float(input("quantidade de acai: "))
e=int(input("quantidade de esfirras: "))
#1kilo = 1000 gramas
y=a*0.024
g=e*3.00
z= y+g
print(round(z, 2))
-- EXECUTION TIME:
0.215792
-- TEST CASE 1:
---- input:
504
1
---- correct output:
15.1
---- user output:
15.1
-- TEST CASE 2:
---- input:
672
2
---- correct output:
22.13
---- user output:
22.13
-- TEST CASE 3:
---- input:
971
0
---- correct output:
23.3
---- user output:
23.3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
